feat(dashboard):Update navbar links to point to dashboard-auditor.html

--- a/auditors/profile-auditor.html
+++ b/auditors/profile-auditor.html
@@ -68,7 +68,7 @@
       <nav class="navbar navbar-light">
          <div class="navbar-left">
             <div class="logo-area">
-               <a class="navbar-brand" href="index.html">
+               <a class="navbar-brand" href="../auditors/dashboard-auditor.html">
                   <img class="dark" src="../../atis-assets/logo/ulbi/LOGO ULBI - WIDE DARK (3).png" alt="logo">
                   <img class="light" src="../../atis-assets/logo/ulbi/LOGO ULBI - WIDE DARK (3).png" alt="logo">
                </a>
