--- a/auditors/pengawasan-audit-tambah.html
+++ b/auditors/pengawasan-audit-tambah.html
@@ -110,7 +110,7 @@
       <nav class="navbar navbar-light">
          <div class="navbar-left">
             <div class="logo-area">
-               <a class="navbar-brand" href="index.html">
+               <a class="navbar-brand" href="../auditors/dashboard-auditor.html">
                   <img class="dark" src="../img/logo-dark.png" alt="logo">
                   <img class="light" src="../img/logo-white.png" alt="logo">
                </a>
