fix(dasbordprodi): Update dashboard-prodi.html: Changed heading from "Data Audit Anda Semua Siklus" to "Data AMI"

--- a/prodi/dashboard-prodi.html
+++ b/prodi/dashboard-prodi.html
@@ -1355,7 +1355,7 @@
               </div>
               <div class="card border-0 px-25">
                 <div class="card-header px-0 border-0">
-                  <h6>Data Audit Anda Semua Siklus</h6>
+                  <h6>Data AMI</h6>
                 </div>
                 <div class="card-body p-0">
                   <div class="tab-content">
