fix(prodiunit): Update program studi to program studi / unit

--- a/prodi/dashboard-prodi.html
+++ b/prodi/dashboard-prodi.html
@@ -1437,7 +1437,7 @@
                               </th>
                               <th>
                                 <span class="userDatatable-title"
-                                  >Program Studi</span
+                                  >Program Studi / Unit</span
                                 >
                               </th>
                               <th>
