fix(dashboardprodi):Update welcome message and API integration

--- a/prodi/dashboard-prodi.html
+++ b/prodi/dashboard-prodi.html
@@ -1220,13 +1220,13 @@
                           class="d-flex align-items-center flex-sm-nowrap flex-wrap text-sm-start text-center"
                         >
                           <div class="card-body">
-                            <h2 class="banner-feature__heading">
+                            <h2 id="namaprofile"class="banner-feature__heading">
                               Welcome Back Garry Sobars!
                             </h2>
                             <p class="banner-feature__para">
-                              Lorem ipsum dolor amet, consetetur sadipscing
-                              elitr sed diam
+                              
                             </p>
+                             
                             <div
                               class="d-flex justify-content-sm-start justify-content-center"
                             >
