Fix(auditors): broken links and remove unnecessary code

--- a/auditors/dashboard-auditor.html
+++ b/auditors/dashboard-auditor.html
@@ -145,7 +145,7 @@
                            <div class="nav-author__options">
                               <ul>
                                  <li>
-                                    <a href="">
+                                    <a href="../auditors/profile-auditor.html">
                                        <i class="uil uil-user"></i> Profile</a>
                                  </li>
                                  <li>
