--- a/auditors/profile-auditor.html
+++ b/auditors/profile-auditor.html
@@ -79,10 +79,10 @@
 
                <div class="hexadash-top-menu position-relative">
                   <ul class="d-flex align-items-center flex-wrap">
-                     <li class="has-subMenu">
+                     <!-- <li class="has-subMenu">
                         <a href="demo2.html" class="active">Dashboard</a>
                         
-                     </li>
+                     </li> -->
                      <li class="has-subMenu">
                         <a href="#" class="">Layouts</a>
                         <ul class="subMenu">
@@ -374,26 +374,7 @@
                            </li>
                         </ul>
                      </li>
-                     <li class="has-subMenu">
-                        <a href="#" class="">Crud</a>
-                        <ul class="subMenu">
-                           <li class="has-subMenu-left">
-                              <a href="#" class="">
-                                 <img src="../../img/svg/shopping-cart.svg" alt="shopping-cart" class="svg nav-icon">
-                                 <span class="menu-text">Firestore Crud</span>
-                              </a>
-                              <ul class="subMenu">
-                                 <li>
-                                    <a class="" href="firestore.html">View All</a>
-                                 </li>
-                                 <li>
-                                    <a class="" href="firestore-add.html">Add
-                                       New</a>
-                                 </li>
-                              </ul>
-                           </li>
-                        </ul>
-                     </li>
+                    
                      <li class="has-subMenu">
                         <a href="#" class="">Features</a>
                         <ul class="subMenu">
@@ -940,12 +921,12 @@
                         </li>
                      </ul>
                   </li> -->
-                  <li>
+                  <!-- <li>
                      <a href="../auditor/dashboard-auditor.html" class="active">
                         <span class="nav-icon uil uil-create-dashboard"></span>
                         <span class="menu-text">Dashboard</span>
                      </a>
-                  </li>
+                  </li> -->
                   <li class="menu-title mt-30">
                      <span>Applications</span>
                   </li>
