--- a/auditors/pengawasan-audit-detail.html
+++ b/auditors/pengawasan-audit-detail.html
@@ -440,8 +440,9 @@
                                           <div class="with-icon">
                                              <select class="form-control ih-medium ip-gray radius-xs b-light"
                                                 id="jawabanindikator">
-                                                <option value="Ya">Ya</option>
                                                 <option value="Tidak">Tidak</option>
+                                                <option value="Ya">Ya</option>
+
                                              </select>
                                           </div>
                                        </div>
@@ -505,6 +506,22 @@
                                           <div class="with-icon">
                                              <input class="form-control ih-medium ip-gray radius-xs b-light" id="target"
                                                 type="date" />
+                                          </div>
+                                       </div>
+                                    </div>
+                                    <div class="form-group row mb-25 form-group-to-hide">
+                                       <div class="col-sm-3 d-flex aling-items-center">
+                                          <label for="inputNameIcon"
+                                             class="col-form-label color-dark fs-14 fw-500 align-center mb-10">Status</label>
+                                       </div>
+                                       <div class="col-sm-9">
+                                          <div class="with-icon">
+                                             <select class="form-control ih-medium ip-gray radius-xs b-light"
+                                                id="status">
+                                                <option value="Belum Dilaksanakan">Belum Dilaksanakan</option>
+                                                <option value="Sudah Dilaksanakan">Sudah Dilaksanakan</option>
+
+                                             </select>
                                           </div>
                                        </div>
                                     </div>
