feat(auditor):Update form labels and placeholders

--- a/auditors/profile-auditor.html
+++ b/auditors/profile-auditor.html
@@ -988,51 +988,42 @@
                                     <label for="inputName" class=" col-form-label color-dark fs-14 fw-500 align-center">Nama Anda : </label>
                                  </div>
                                  <div class="col-sm-9">
-                                    <input type="text" class="form-control ih-medium ip-light radius-xs b-light px-15" id="inputName" placeholder="Duran Clayton">
+                                    <input type="text" class="form-control ih-medium ip-light radius-xs b-light px-15" id="nama_user" placeholder="Nama Anda">
                                  </div>
                               </div>
                               <div class="form-group row">
                                  <div class="col-sm-3 d-flex aling-items-center">
-                                    <label for="element-text" class=" col-form-label color-dark fs-14 fw-500 align-center">NIK / NIP :</label>
+                                    <label for="jabatan" class=" col-form-label color-dark fs-14 fw-500 align-center">Jabatan :</label>
                                  </div>
                                  <div class="col-sm-9">
-                                    <input type="email" class="form-control ih-medium ip-light radius-xs b-light px-15" id="element-text" placeholder="1122XXX">
+                                    <input type="email" class="form-control ih-medium ip-light radius-xs b-light px-15" id="user_level" placeholder="1122XXX">
                                  </div>
                               </div>
                               <div class="form-group row">
                                  <div class="col-sm-3 d-flex aling-items-center">
-                                    <label for="element-text2" class=" col-form-label color-dark fs-14 fw-500 align-center">Telepon</label>
+                                    <label for="nidn" class=" col-form-label color-dark fs-14 fw-500 align-center">Nidn</label>
                                  </div>
                                  <div class="col-sm-9">
-                                    <input type="url" class="form-control ih-medium ip-light radius-xs b-light px-15" id="element-text2" placeholder="62851xxxx">
+                                    <input type="url" class="form-control ih-medium ip-light radius-xs b-light px-15" id="nidn" placeholder="62851xxxx">
                                  </div>
                               </div>
                               <div class="form-group row">
                                  <div class="col-sm-3 d-flex aling-items-center">
-                                    <label for="element-text3" class=" col-form-label color-dark fs-14 fw-500 align-center">Email</label>
+                                    <label for="email" class=" col-form-label color-dark fs-14 fw-500 align-center">Email</label>
                                  </div>
                                  <div class="col-sm-9">
-                                    <input type="number" class="form-control ih-medium ip-light radius-xs b-light px-15" id="element-text2" placeholder="xx@gmail.com">
+                                    <input type="number" class="form-control ih-medium ip-light radius-xs b-light px-15" id="email" placeholder="xx@gmail.com">
                                  </div>
                               </div>
                               <div class="form-group row">
                                  <div class="col-sm-3 d-flex aling-items-center">
-                                    <label for="element-text3" class=" col-form-label color-dark fs-14 fw-500 align-center">Foto Anda Saat Ini :</label>
+                                    <label for="foto" class=" col-form-label color-dark fs-14 fw-500 align-center">Foto Anda Saat Ini :</label>
                                  </div>
                                  <div class="col-sm-9">
                                     <a href="#" class="profile-image rounded-circle d-block m-0 wh-38" style="background-image:url('../../img/tm6.png'); background-size: cover;"></a>
                                  </div>
                               </div>
-                              <div class="form group row">
-                                 <div class="col-sm-3 d-flex aling-items-center">
-                                    <label for="element-text5" class=" col-form-label color-dark fs-14 fw-500 align-center">Upload Foto Baru</label>
-                                 </div>
-                                 <div class="col-sm-9">
-                                    <div class="custom-file">
-                                       <input class="form-control custom-file-input" type="file" id="customFile">
-                                    </div>
-                                 </div>
-                              </div>
+                              
                               <br>
                               <div class="form-group row justify-content-end">
                                  <div class="col-sm-12">
@@ -1140,7 +1131,7 @@
    <script src="../../assets/theme_assets/js/jvectormap-init.js"></script>
    <script src="../../assets/theme_assets/js/leaflet-init.js"></script>
    <script src="../../assets/theme_assets/js/main.js"></script>
-   <script src="" type="module"></script>
+   <script src="profile-auditor.js" type="module"></script>
    <!-- endinject-->
 </body>
 
