Fix (admin) API call and add missing function call

--- a/admins/dashboard-admins.html
+++ b/admins/dashboard-admins.html
@@ -50,6 +50,7 @@
    <!-- Library GET Sidebar -->
    <script src="../js/cihuy.js" type="module"></script>   
    <script src="dashboard.js" type="module"></script>
+   <script src="profil.js" type="module"></script>
 
    <!-- endinject -->
 
