remove(prodi): Commented out Google Maps API script

--- a/prodi/dashboard-prodi.html
+++ b/prodi/dashboard-prodi.html
@@ -1634,7 +1634,7 @@
     </div>
     <div class="overlay-dark-sidebar"></div>
     <div class="customizer-overlay"></div>
-    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBgYKHZB_QKKLWfIRaYPCadza3nhTAbv7c"></script>
+    <!-- <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBgYKHZB_QKKLWfIRaYPCadza3nhTAbv7c"></script> -->
     <!-- inject:js-->
     <script src="../assets/vendor_assets/js/jquery/jquery-3.5.1.min.js"></script>
     <script src="../assets/vendor_assets/js/jquery/jquery-ui.js"></script>
