--- a/auditors/pengawasan-audit.html
+++ b/auditors/pengawasan-audit.html
@@ -45,7 +45,7 @@
 
    <link rel="stylesheet" href="../assets/vendor_assets/css/wickedpicker.min.css">
 
-   <link rel="stylesheet" href="../style.css">
+   <link rel="stylesheet" href="../../style.css">
    <script src="../js/cihuy.js" type="module"></script>
 
    <!-- endinject -->
