feat(audit):Add "Nama Indikator" column to audit supervision table

--- a/auditors/pengawasan-audit.html
+++ b/auditors/pengawasan-audit.html
@@ -418,6 +418,9 @@
                                           <span class="userDatatable-title">Butir Standar</span>
                                        </th>
                                        <th>
+                                          <span class="userDatatable-title">Nama Indikator</span>
+                                       </th>
+                                       <th>
                                           <span class="userDatatable-title">Temuan KTS</span>
                                        </th>
                                        <th>
