--- a/auditors/pengawasan-audit-detail.html
+++ b/auditors/pengawasan-audit-detail.html
@@ -395,7 +395,7 @@
 
                         <div class="card card-horizontal card-default card-md mb-4">
                            <div class="card-header">
-                              <h6> Audit Tambah 
+                              <h6> Pengauditan 
                               </h6>
                            </div>
                            <div class="card-body py-md-30">
