--- a/ami/ami.html
+++ b/ami/ami.html
@@ -45,7 +45,7 @@
 
    <link rel="stylesheet" href="../assets/vendor_assets/css/wickedpicker.min.css">
 
-   <link rel="stylesheet" href="../style.css">
+   <link rel="stylesheet" href="../../style.css">
 
    <!-- endinject -->
    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon.png">
