--- a/auditors/pengawasan-audit-detail.html
+++ b/auditors/pengawasan-audit-detail.html
@@ -621,7 +621,7 @@
    <script src="../assets/theme_assets/js/jvectormap-init.js"></script>
    <script src="../assets/theme_assets/js/leaflet-init.js"></script>
    <script src="../assets/theme_assets/js/main.js"></script>
-   <script src="./proses_audit_tambah.js" type="module"></script>
+   <script src="./proses_audit_detail.js" type="module"></script>
    <!-- <script src="./mekanisme_add.js" type="module"></script> -->
 
    <!-- endinject-->
