Update label for Jawaban Indikator in pengawasan-audit-detail.html

--- a/auditors/pengawasan-audit-detail.html
+++ b/auditors/pengawasan-audit-detail.html
@@ -434,7 +434,7 @@
                                     <div class="form-group row mb-25">
                                        <div class="col-sm-3 d-flex aling-items-center">
                                           <label for="inputNameIcon"
-                                             class="col-form-label color-dark fs-14 fw-500 align-center mb-10"></label>
+                                             class="col-form-label color-dark fs-14 fw-500 align-center mb-10">Jawaban Indikator</label>
                                        </div>
                                        <div class="col-sm-9">
                                           <div class="with-icon">
