feat(audit): Add button styles for different status

--- a/auditors/pengawasan-audit.html
+++ b/auditors/pengawasan-audit.html
@@ -74,6 +74,15 @@
           cursor: pointer;
           font-size: 12px;
       }
+      .fix-button {
+          background-color: #4a99f3; /* Warna latar belakang */
+          color: #fff; /* Warna teks */
+          padding: 5px 15px; /* Ukuran padding */
+          border: none; /* Tanpa border */
+          border-radius: 15px; /* Sudut bulat */
+          cursor: pointer;
+          font-size: 12px;
+      }
       .success-button:hover {
           background-color: #663cff; /* Warna latar belakang saat hover */
       }
