feat(auditdetail): Add status dropdown in audit detail form

--- a/auditors/pengawasan-audit-detail.html
+++ b/auditors/pengawasan-audit-detail.html
@@ -509,6 +509,23 @@
                                           </div>
                                        </div>
                                     </div>
+                                    <div class="form-group row mb-25">
+                                       <div class="col-sm-3 d-flex aling-items-center">
+                                          <label for="inputNameIcon"
+                                             class="col-form-label color-dark fs-14 fw-500 align-center mb-10">Status</label>
+                                       </div>
+                                       <div class="col-sm-9">
+                                          <div class="with-icon">
+                                             <select class="form-control ih-medium ip-gray radius-xs b-light"
+                                                id="status" >
+                                                <option value="Sudah Dilaksanakan">Sudah Dilaksanakan</option>
+                                                <option value="Belum Dilaksanakan">Belum Dilaksanakan</option>
+                                                <option value="Ada Perbaikan">Ada Perbaikan</option>
+
+                                             </select>
+                                          </div>
+                                       </div>
+                                    </div>
                                     <button type="button" id="buttoninsert"
                                        style="margin-right:20px; margin-top: 12px;  margin-bottom: 12px;"
                                        class="btn btn-default btn-squared color-primary btn-outline-primary ">
