fix(prodilink): Add link_perbaikan column to revisi.html and revisi.js

--- a/prodi/revisi.html
+++ b/prodi/revisi.html
@@ -442,6 +442,9 @@
                                           <span class="userDatatable-title">Target Waktu Perbaikan</span>
                                        </th>
                                        <th>
+                                          <span class="userDatatable-title">Link Revisi</span>
+                                       </th>
+                                       <th>
                                           <span class="userDatatable-title">Status</span>
                                        </th>
                                        <th>
