feat(prodi): Update dashboard heading to include "Unit"

--- a/prodi/dashboard-prodi.html
+++ b/prodi/dashboard-prodi.html
@@ -1208,7 +1208,7 @@
                           </div>
                           <div class="card-body">
                             <h1 class="banner-feature__heading">
-                              Dashboard Program Studi
+                              Dashboard Program Studi / Unit
                             </h1>
                           </div>
                         </div>
