feat(prodi):Remove commented out code for dashboard cards

--- a/prodi/dashboard-prodi.html
+++ b/prodi/dashboard-prodi.html
@@ -1249,7 +1249,7 @@
               </div>
               <div class="col-xxl-3 col-sm-6 col-ssm-12 mb-25">
                 <!-- Card 1  -->
-                <div
+                <!-- <div
                   class="ap-po-details ap-po-details--luodcy overview-card-shape radius-xl d-flex justify-content-between"
                 >
                   <div
@@ -1270,13 +1270,13 @@
                       <i class="uil uil-arrow-growth"></i>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <!-- Card 1 End  -->
               </div>
 
               <div class="col-xxl-3 col-sm-6 col-ssm-12 mb-25">
                 <!-- Card 2 -->
-                <div
+                <!-- <div
                   class="ap-po-details ap-po-details--luodcy overview-card-shape radius-xl d-flex justify-content-between"
                 >
                   <div
@@ -1297,13 +1297,13 @@
                       <i class="uil uil-users-alt"></i>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <!-- Card 2 End  -->
               </div>
 
               <div class="col-xxl-3 col-sm-6 col-ssm-12 mb-25">
                 <!-- Card 3 -->
-                <div
+                <!-- <div
                   class="ap-po-details ap-po-details--luodcy overview-card-shape radius-xl d-flex justify-content-between"
                 >
                   <div
@@ -1324,12 +1324,12 @@
                       <i class="uil uil-usd-circle"></i>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <!-- Card 3 End  -->
               </div>
               <div class="col-xxl-3 col-sm-6 col-ssm-12 mb-25">
                 <!-- Card 4  -->
-                <div
+                <!-- <div
                   class="ap-po-details ap-po-details--luodcy overview-card-shape radius-xl d-flex justify-content-between"
                 >
                   <div
@@ -1350,7 +1350,7 @@
                       <i class="uil uil-tachometer-fast"></i>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <!-- Card 4 End  -->
               </div>
               
