--- a/pengawasan/pengawasan-audit.html
+++ b/pengawasan/pengawasan-audit.html
@@ -65,6 +65,15 @@
           cursor: pointer;
           font-size: 12px;
       }
+      .fix-button {
+          background-color: #4a99f3; /* Warna latar belakang */
+          color: #fff; /* Warna teks */
+          padding: 5px 15px; /* Ukuran padding */
+          border: none; /* Tanpa border */
+          border-radius: 15px; /* Sudut bulat */
+          cursor: pointer;
+          font-size: 12px;
+      }
       .success-button {
           background-color: #009e3d; /* Warna latar belakang */
           color: #fff; /* Warna teks */
