--- a/ami/ami.html
+++ b/ami/ami.html
@@ -400,10 +400,10 @@
                                           </div>
                                           <div class="form-group mb-20">
                                              <div class="category-member">
-                                                <Label>Siklus :</Label>
+                                                <Label>Periode :</Label>
 
                                                 <select class="js-example-basic-single js-states form-control" id="siklus">
-                                                   <option disabled value="JAN">--Pilih Siklus--</option>
+                                                   <option disabled value="JAN">--Pilih Periode--</option>
                                                 </select>
                                              </div>
                                           </div>
