feat(standar): Add "Prodi Unit" column to the table

--- a/ami/standar.html
+++ b/ami/standar.html
@@ -491,6 +491,8 @@
                                           <span class="userDatatable-title">Isi</span>
                                        </th>
                                        <th>
+                                          <span class="userDatatable-title">Prodi Unit</span>
+                                       </th><th>
                                           <span class="userDatatable-title">Periode</span>
                                        </th>
                                        <th>
