feat(standar):Update labels in standar.html form

--- a/ami/standar.html
+++ b/ami/standar.html
@@ -352,7 +352,7 @@
                                     <div class="new-member-modal">
                                        <form method="POST">
                                           <div class="form-group mb-20">
-                                             <Label>Standar :</Label>
+                                             <Label>Judul Standar :</Label>
                                              <input type="text" class="form-control" placeholder="Nama Standar" id="standar">
                                           </div>
                                           <div class="form-group mb-20">
@@ -361,7 +361,7 @@
                                          </div>
                                          
                                           <div class="form-group mb-20">
-                                             <label>Isi:</label>
+                                             <label>Isi Standar:</label>
                                              <div class="note-toolbar ">
                                                  <button class="note-toolbar-button" id="bold-button"><strong>B</strong></button>
                                                  <button class="note-toolbar-button" id="italic-button"><em>I</em></button>
