fix(standar):Update input and textarea IDs in standar.html

--- a/ami/standar.html
+++ b/ami/standar.html
@@ -353,7 +353,7 @@
                                        <form method="POST">
                                           <div class="form-group mb-20">
                                              <Label>Judul Standar :</Label>
-                                             <input type="text" class="form-control" placeholder="Nama Standar" id="standar">
+                                             <input type="text" class="form-control" placeholder="Nama Standar" id="judulStandar">
                                           </div>
                                           <div class="form-group mb-20">
                                              <label>Indikator :</label>
@@ -369,14 +369,14 @@
                                                  <button class="note-toolbar-button" id="url">URL</button>
 
                                              </div>
-                                             <textarea type="text" class="form-control" placeholder="" id="isi"></textarea>
+                                             <textarea type="text" class="form-control" placeholder="" id="isiStandar"></textarea>
                                          </div>
 
                                          <div class="form-group mb-20">
                                           <div class="category-member">
                                              <Label>Periode :</Label>
 
-                                             <select class="js-example-basic-single js-states form-control" id="siklus">
+                                             <select class="js-example-basic-single js-states form-control" id="periode">
                                                 <option disabled value="JAN">--Pilih Periode--</option>
                                              </select>
                                           </div>
