--- a/users/users-convert.html
+++ b/users/users-convert.html
@@ -487,29 +487,15 @@
                                  <thead>
                                     <tr class="userDatatable-header">
                                        <th>
-                                          <span class="userDatatable-title">id</span>
+                                          <span class="userDatatable-title">No</span>
                                        </th>
                                        <th>
-                                          <span class="userDatatable-title">Fakultas</span>
+                                          <span class="userDatatable-title">ID SIAP</span>
                                        </th>
                                        <th>
-                                          <span class="userDatatable-title">Dekan</span>
+                                          <span class="userDatatable-title">User Level</span>
                                        </th>
-                                       <th>
-                                          <span class="userDatatable-title">NIDN</span>
-                                       </th>
-                                       <th data-type="html" data-name='position'>
-                                          <span class="userDatatable-title">NIP</span>
-                                       </th>
-                                       <th>
-                                          <span class="userDatatable-title">No Telepon</span>
-                                       </th>
-                                       <th data-type="html" data-name='status'>
-                                          <span class="userDatatable-title">Email</span>
-                                       </th>
-                                       <th>
-                                          <span class="userDatatable-title">Foto</span>
-                                       </th>
+                                       
                                        <th>
                                           <span class="userDatatable-title float-end">action</span>
                                        </th>
@@ -626,7 +612,7 @@
    <script src="../assets/theme_assets/js/jvectormap-init.js"></script>
    <script src="../assets/theme_assets/js/leaflet-init.js"></script>
    <script src="../assets/theme_assets/js/main.js"></script>
-   <script src="./users-fakultas.js" type="module"></script>
+   <script src="./users-convert.js" type="module"></script>
    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> -->
 
    <!-- endinject-->
