Update ID SIAP and User Level fields in users-convert.html

--- a/users/users-convert.html
+++ b/users/users-convert.html
@@ -356,11 +356,11 @@
                                           
                                           <div class="form-group mb-20">
                                              <Label> ID SIAP :</Label>
-                                             <input type="text" class="form-control"id="email" placeholder="ID SIAP">
+                                             <input type="text" class="form-control"id="idrtm" placeholder="ID SIAP">
                                           </div>
                                           <div class="form-group mb-20">
                                              <label for="siapId">User Level:</label>
-                                             <select class="form-control" id="siapId">
+                                             <select class="form-control" id="userlevel">
                                                <option value="siapId1">SIAP ID 1</option>
                                              </select>
                                            </div>
