feat(kebijakanspmi): Add columns for Tahun and Tanggal in kebijakanspmi.html

--- a/settingsmenu/kebijakanspmi.html
+++ b/settingsmenu/kebijakanspmi.html
@@ -457,7 +457,13 @@
                                           <span class="userDatatable-title">Keterangan</span>
                                        </th>
                                        <th>
+                                          <span class="userDatatable-title">Tahun</span>
+                                       </th>
+                                       <th>
                                           <span class="userDatatable-title">Link Dokumen</span>
+                                       </th>
+                                       <th>
+                                          <span class="userDatatable-title">Tanggal</span>
                                        </th>
                                       
                                       
