fix: Update modal titles and add select dropdown for Periode in kebijakanspmi.html

--- a/settingsmenu/kebijakanspmi.html
+++ b/settingsmenu/kebijakanspmi.html
@@ -337,7 +337,7 @@
                            <div class="modal-dialog modal-dialog-centered">
                               <div class="modal-content  radius-xl">
                                  <div class="modal-header">
-                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Tambah File Untuk Berita</h6>
+                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Tambah File Untuk kebijakan spmi</h6>
                                     <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                                        <img src="../img/svg/x.svg" alt="x" class="svg">
                                     </button>
@@ -345,7 +345,11 @@
                                  <div class="modal-body">
                                     <div class="new-member-modal">
                                        <form id="myForm" method="post">
-                                         
+                                          <div class="form-group mb-20">
+                                             <label for="Periode">Periode:</label>
+                                             <select id="periode" class="form-control"  placeholder="Periode">
+                                             </select>
+                                         </div>
                                           <div class="form-group mb-20">
                                              <Label for="namadokumen">Nama Dokumen :</Label>
                                              <input type="text" class="form-control" id="namadokumen" placeholder="Nama Dokumen">
@@ -380,7 +384,7 @@
                            <div class="modal-dialog modal-dialog-centered">
                               <div class="modal-content  radius-xl">
                                  <div class="modal-header">
-                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Update File Untuk Auditor</h6>
+                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Update File Kebijakan SPMI</h6>
                                     <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                                        <img src="../img/svg/x.svg" alt="x" class="svg">
                                     </button>
@@ -388,7 +392,11 @@
                                  <div class="modal-body">
                                     <div class="new-member-modal">
                                        <form id="myForm" method="post">
-                                         
+                                          <div class="form-group mb-20">
+                                             <label for="Periode">Periode:</label>
+                                             <select id="periode-update" class="form-control"  placeholder="Periode">
+                                             </select>
+                                         </div>
                                           <div class="form-group mb-20">
                                              <Label for="namadokumen">Nama Dokumen :</Label>
                                              <input type="text" class="form-control" id="namadokumen-update" placeholder="Nama Lengkap">
